force-app/main/default/objects/Activity/fields/Interview_Format__c.field-meta.xml
<CustomField>
    <fullName>Interview_Format__c</fullName>
    <description>Interview formats include phone calls, zoom meetings, or traditional on-site interviews.</description>
    <label>Interview Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>