force-app/main/default/objects/Activity/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <description>Types of job interviews one might experience in the job search.</description>
    <label>Interview Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-on-one</fullName>
            </value>
            <value>
                <fullName>Informal</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
            <value>
                <fullName>Behavioral</fullName>
            </value>
            <value>
                <fullName>Career Fair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>